@@ -305,7 +305,7 @@ AC_CONFIG_FILES([Makefile m4macros/Makefile scripts/Makefile \
                 libglimmer-solve/Makefile libglimmer-solve/SLAP/Makefile \
                 libglimmer-solve/blas/Makefile libglint/Makefile \
                 libglide/Makefile tests/Makefile example-drivers/Makefile \
-		extensions/Makefile extensions/erosion/Makefile \
+		extensions/Makefile extensions/erosion/Makefile extensions/erosion/src/Makefile \
                 tests/EISMINT/Makefile tests/EISMINT/src/Makefile tests/EISMINT/benchmarks/Makefile \
                 tests/EISMINT/EISMINT-1/Makefile  tests/EISMINT/EISMINT-2/Makefile \
                 tests/EISMINT/isos/Makefile  tests/EISMINT/lin-non_lin/Makefile \
